--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,3 @@
-elasticsearch>=5.2.0,<5.3.0
-progressbar2>=3.10.0,<3.11.0
+elasticsearch>=5.5.2,<5.6.0
+progressbar2>=3.36.0,<3.37.0
+backports.csv>=1.0.5,<1.1.0
